fixed the spacing for the alert box, Webkit browsers were lining it up from the bottom of the navbar, Firefox was using the top of the viewport

--- a/main.css
+++ b/main.css
@@ -43,10 +43,14 @@ body {
 .alert {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: 30px;
     padding-left: 40px;
     text-align: center;
     width: 300px;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    .alert { margin-top: -40px; }
 }
 
 input[id="keyword"] {
